[Feature]flow obj: 只有对象引用变化才会collect, 属性变化不collect
Signed-off-by: wangyunke <extern.wang.yunke@mobilityasia.com.cn>