@@ -1,5 +1,7 @@
 package com.i.utils;
 
+import com.i.model.Person;
+
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.ObjectInputStream;
@@ -8,17 +10,17 @@ import java.io.ObjectOutputStream;
 public class ObjectUtil {
 
     public void createObject() throws Exception {
-        Person person1 = Person.class.newInstance();
-
-        Person person2 = Person.class.getConstructor().newInstance();
-        person2.name = "wang";
-
-        Person person3 = (Person) person2.clone();
-
-        ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(""));
-        out.writeObject(person3);
-        ObjectInputStream input = new ObjectInputStream(new FileInputStream(""));
-        Person person4 = (Person) input.readObject();
+//        Person person1 = Person.class.newInstance();
+//
+//        Person person2 = Person.class.getConstructor().newInstance();
+//        person2.name = "wang";
+//
+//        Person person3 = (Person) person2.clone();
+//
+//        ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(""));
+//        out.writeObject(person3);
+//        ObjectInputStream input = new ObjectInputStream(new FileInputStream(""));
+//        Person person4 = (Person) input.readObject();
 
     }
 }
